# Geo-invert

./: .gitignore
. devcontainer/: devcontainer.json  setup.sh
.devcontainer/: devcontainer.json  setup.sh
backend/: CMakeLists.txt
backend/src/: main.cpp
docs/: beginning.md  stitch-design-prompt.md
infra/: docker-compose.yml  init.sql
stitch-designs/stitch_geostack_insights/dashboard/: code.html
stitch-designs/stitch_geostack_insights/data_entry/: code.html
stitch-designs/stitch_geostack_insights/project_view/: code.html
stitch-designs/stitch_geostack_insights/survey_detail_3d_tab/: code.html
stitch-designs/stitch_geostack_insights/survey_detail_data_tab/: code.html
stitch-designs/stitch_geostack_insights/survey_detail_export_tab/: code.html
stitch-designs/stitch_geostack_insights/survey_detail_interpretation_tab/: code.html
stitch-designs/stitch_geostack_insights/survey_detail_qc_tab/: code.html
stitch-designs/stitch_geostack_insights/technical_precision/: DESIGN.md
